--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "^5.19.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.7",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
@@ -20,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
@@ -30,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "husky": "^8.0.0",
     "postcss": "^8",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
