--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.19.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "next": "14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "redux-persist-transform-encrypt": "^5.1.1"
+    "redux-persist-transform-encrypt": "^5.1.1",
+    "secure-web-storage": "^1.0.2",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
